# sentilens-server

./: .gitignore  Dockerfile  docker-compose.yml  example.env  pyproject.toml  setup.cfg
app/: config.py  database.py  main.py
app/auth/: __init__.py  auth.py
app/crud/: __init__.py  note_crud.py  user_crud.py
app/models/: __init__.py  music_models.py  note_models.py  reccomendation_models.py  recommendation_models.py  sentiment_models.py  user_models.py
app/routers/: __init__.py  music_endpoints.py  note_endpoints.py  reccomendation_endpoints.py  recommendation_endpoints.py  user_endpoints.py
app/sentiment_analyzer/: __init__.py  analyzer.py  new_analyzer.py
app/templates/: password_reset_notification.html  registration_notification.html
app/utils/: email_notifications.py  mood_analyzer.py
migrations/: env.py
nginx/: nginx.conf
