[tool.poetry]
name = "sentilens"
version = "0.1.0"
description = ""
authors = ["MelDxKviel <mega1hack52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pyjwt = "^2.8.0"
sqlmodel = "^0.0.16"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"
passlib = "^1.7.4"
alembic = "^1.13.1"
gunicorn = "^21.2.0"
fastapi-mail = "^1.4.1"
redis = "^5.0.4"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
flake8 = "^7.1.1"
mypy = "^1.12.0"
types-passlib = "^1.7.7.20240819"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
